--- a/package.json
+++ b/package.json
@@ -7,11 +7,19 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-loader-spinner": "^5.3.4",
+    "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.0",
     "react-snowfall": "^1.1.1",
-    "web-vitals": "^2.1.2"
+    "react-spinners": "^0.13.7",
+    "sort-by": "^1.2.0",
+    "spinners-react": "^1.0.7",
+    "web-vitals": "^2.1.2",
+    "written-number": "^0.11.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,6 +48,10 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.2.3"
+    "@rvxlab/tailwind-plugin-ios-full-height": "^1.1.0",
+    "autoprefixer": "^10.4.13",
+    "gh-pages": "^3.2.3",
+    "postcss": "^8.4.20",
+    "tailwindcss": "^3.2.4"
   }
 }
