--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "homepage": "https://diegodan1893.github.io/carta-nochebuena",
   "dependencies": {
+    "@emotion/react": "^11.10.5",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^17.0.2",
+    "react-awesome-reveal": "^4.1.0",
     "react-dom": "^17.0.2",
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.6.1",
